BACKEND (Spring Boot): - API REST com autenticação JWT - Endpoint POST /api/auth/login (retorna token) - Endpoint GET /api/users (lista usuários) - PostgreSQL como banco de dados - Configuração CORS para integração com frontend
FRONTEND (Next.js):
- Interface com tela de login e dashboard
- Serviços para comunicação com a API
- Estilização com Tailwind CSS
- App Router do Next.js 15

ESTRUTURA:
frontend/ - Next.js
backend/ - Spring Boot

Co-authored-by: Copilot <copilot@github.com>